# clang_rename

./: .gitignore  CMakeLists.txt  CMakeSettings.json
.github/workflows/: main.yml
clang_rename/: CMakeLists.txt  clang_rename  clang_rename.cpp  clang_rename.h
